--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "An app to find yelp reviews and health grades for restaurants in NYC",
   "main": "index.js",
   "scripts": {
+    "restart": "pm2 startOrRestart ecosystem.config.js",
+    "deploy": "pm2 deploy ecosystem.config.js production",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon app.js",
     "npm-check": "npm-check"
@@ -24,6 +26,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "exports-loader": "^0.7.0",
+    "pm2": "^3.0.3",
     "webpack": "^2.2.1"
   },
   "dependencies": {
